--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.6",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
     "babel-jest": "^29.7.0",
     "jest": "^27.5.1",
